--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -22,10 +22,11 @@ jobs:
           find . -maxdepth 4 -name "*.xcworkspace" -print
 
       - name: Build (iPhone Simulator)
-        run: |
-          xcodebuild \
-            -project KyuuseiKigaku/KyuuseiKigaku.xcodeproj \
-            -scheme KyuuseiKigaku \
-            -configuration Debug \
-            -destination 'platform=iOS Simulator,name=iPhone 15' \
-            clean build
+  run: |
+    xcodebuild \
+      -project KyuuseiKigaku/KyuuseiKigaku.xcodeproj \
+      -scheme KyuuseiKigaku \
+      -configuration Debug \
+      -destination 'platform=iOS Simulator,name=Any iOS Simulator Device' \
+      clean build
+
