--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -19,13 +19,25 @@ jobs:
       - name: List schemes
         run: xcodebuild -list -project KyuuseiKigaku/KyuuseiKigaku.xcodeproj
 
+      - name: Pick a simulator (UDID)
+        run: |
+          UDID=$(xcrun simctl list devices available --json | ruby -rjson -e '
+            data=JSON.parse(STDIN.read);
+            devs=data["devices"].values.flatten;
+            iphone=devs.find{|d| d["isAvailable"] && d["name"].start_with?("iPhone ")};
+            abort("No iPhone simulator found") unless iphone;
+            puts iphone["udid"];
+          ')
+          echo "SIM_UDID=$UDID" >> $GITHUB_ENV
+          echo "Picked simulator UDID: $UDID"
+
       - name: Build (Simulator)
         run: |
           xcodebuild \
             -project KyuuseiKigaku/KyuuseiKigaku.xcodeproj \
             -scheme KyuuseiKigaku \
             -configuration Debug \
-            -destination "platform=iOS Simulator,name=Any iOS Simulator Device" \
+            -destination "platform=iOS Simulator,id=${SIM_UDID}" \
             CODE_SIGNING_ALLOWED=NO \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGN_IDENTITY="" \
